or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.4 - unreleased

	Tom Collins
	- Link math lib when compiling for MySQL.
	- Create ~vpopmail and ~vpopmail/etc in configure script. [930939]
	  Note that any code creating files in ~vpopmail should probably
	  be moved from configure and into Makefile (under make install).

5.4.3 - released 11-Mar-04

	Tom Collins
	- Add missing link libs (m, nsl, socket) on Solaris installs.
	- Fix vsetuserquota() to write properly formatted quota to 
	  maildirsize file.
	- Update vdominfo to ignore non-domains in users/assign.
	- Update vconvert and dotqmail2valias to ignore non-domains in
	  users/assign.

5.4.2 - released 22-Feb-04

	Tom Collins
	- Remove attempts to free() static buffers in vpgsql.c. [888888]
	- Fix problems with creating valias table in vpgsql.c. [892595]
	- Remove unnecessary check for C++ from configure[.in].
	- Don't include DESTDIR when building inc_deps and lib_deps.
	  [886988]
	- Properly parse Maildir and mbox delivery lines in .qmail files
	  in vdelivermail (and exit(111) for mbox lines). [889756]
	- Temporarily disable -s option to vadduser (since it's broken).
	  [895375]

	Anders Brander
	- Add contrib/checkpassword_debug.[README,c] for testing and
	  debugging problems with vchkpw. [862608]

5.4.1 - released 10-Feb-04

	Tom Collins
	- Add dotqmail2valias program for converting .qmail-alias files
	  to valias table entries.

5.4.0 - released 1-Feb-04

	Tom Collins
	- Update configure with correct location of vlimits.default.
	- Fix typo (ammount) in vmoddomlimits. [882884]
	- Don't include $(DESTDIR) when building vpopmailbindir. [884247]
	- Mention compatability issues with older SMTP AUTH patches. 
	  [882351]

5.4.0-rc2 - released 19-Jan-04

	Michael Bowe
	- Added some basic 5.4 upgrade notes to the UGPRADE file
	- Fix typo's in configure.in that relate to the errors generated
	  when a discontinued configure option is used